# mathpng

./: .gitignore  Cargo.toml  QUICKSTART.md  README.md  original-plan.md
mathpng-ffi/: Cargo.toml  build-xcframework.sh
mathpng-ffi/MathRenderer.xcframework/: Info.plist
mathpng-ffi/MathRenderer.xcframework/ios-arm64-simulator/Headers/mathpng_ffiFFI/: module.modulemap
mathpng-ffi/MathRenderer.xcframework/ios-arm64/Headers/mathpng_ffiFFI/: mathpng_ffiFFI.h
mathpng-ffi/src/: lib.rs
src/: font.rs  layout.rs  lib.rs  main.rs  math_expr.rs  parse.rs  png_render.rs  render.rs  svg_render.rs
tests/: generate_references.mjs  package-lock.json  package.json  test_integration.rs  test_snapshots.rs
