[package]
name = "mathpng-ffi"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings for mathpng — Swift access to LaTeX math rendering"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "mathpng_ffi"

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

[dependencies]
mathpng = { path = ".." }
uniffi = { version = "0.28", features = ["cli"] }
thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
